--- a/correction.vcxproj.filters
+++ b/correction.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="myHead.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="correct.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
