--- a/.gitignore
+++ b/.gitignore
@@ -338,8 +338,7 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
-/1.csv
-/1_m_out.jpg
 *.jpg
 *.csv
-/eigen-3.3.7/out/build/x64-Debug (默认值)
+*.zip
+/Others
